// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays correct first child 1`] = `
<nav
  class="my-navbar"
>
  <ul
    class="nav-list"
  >
    <div
      class="meal-logo"
    >
      <a
        href="/"
      >
        Meal catalogue
      </a>
    </div>
    <div
      class="list-item"
    >
      <a
        href="/"
      >
        Home
      </a>
      <a
        href="/random"
      >
        Random meal
      </a>
      <a
        href="/about"
      >
        About us
      </a>
    </div>
    <div
      class="search-item"
    >
      <div
        class="search-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <input
          class="MuiInputBase-input MuiInput-input"
          placeholder="search meals"
          type="text"
          value=""
        />
      </div>
    </div>
  </ul>
</nav>
`;

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <nav
    class="my-navbar"
  >
    <ul
      class="nav-list"
    >
      <div
        class="meal-logo"
      >
        <a
          href="/"
        >
          Meal catalogue
        </a>
      </div>
      <div
        class="list-item"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          href="/random"
        >
          Random meal
        </a>
        <a
          href="/about"
        >
          About us
        </a>
      </div>
      <div
        class="search-item"
      >
        <div
          class="search-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline"
        >
          <input
            class="MuiInputBase-input MuiInput-input"
            placeholder="search meals"
            type="text"
            value=""
          />
        </div>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;
